--- a/Project/Project/main.html
+++ b/Project/Project/main.html
@@ -12,6 +12,9 @@
 
 <body>
     <div class="container">
+        <div>
+            
+        </div>
         <div class="Titles">
             <p>FREE HEALTH AND YOGA TIPS</p>
         </div>
