--- a/Project/Project/Yoga.html
+++ b/Project/Project/Yoga.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compitable" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale= 1.0 " />
-    <title>Free Yoga Tips</title>
+    <title>Yoga Tips</title>
     <link rel="stylesheet" href="../Styles/1.css">
-    <link rel="stylesheet" href="../bootstrap-5.1.1-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../bootstrap-5.1.1-dist/css/bootstrap.min.css">
+    <script src="../bootstrap-5.1.1-dist/js/bootstrap.js"></script>
 </head>
 
 <body>
