--- a/Project/Project/health.html
+++ b/Project/Project/health.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale= 1.0 " />
     <title>Free Health Tips</title>
     <link rel="stylesheet" href="../Styles/1.css">
-    <link rel="stylesheet" href="../bootstrap-5.1.1-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../bootstrap-5.1.1-dist/css/bootstrap.min.css">
+    <script src="../bootstrap-5.1.1-dist/js/bootstrap.js"></script>
 </head>
 
 <body>
