--- a/Project/Project/main.html
+++ b/Project/Project/main.html
@@ -7,28 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale= 1.0 " />
     <title>Free Health and Yoga Tips</title>
     <link rel="stylesheet" href="../Styles/1.css">
-    <link rel="stylesheet" href="../bootstrap-5.1.1-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../bootstrap-5.1.1-dist/css/bootstrap.min.css">
+    <script src="../bootstrap-5.1.1-dist/js/bootstrap.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <div>
-            
-        </div>
         <div class="Titles">
-            <p>FREE HEALTH AND YOGA TIPS</p>
+            <h1>FREE HEALTH AND YOGA TIPS</h1>
         </div>
         <div class="healthimg">
+            <img src="../Images/Mainimages/Health tips.jpg" alt="Health img" width=400px height=150px;>
+            <p>Poor eating habits include under- or over-eating, not having enough of the healthy foods we need each
+                day, or consuming too many types of food and drink, which are low in fibre or high in fat, salt and/or
+                sugar.
+                These unhealthy eating habits can affect our nutrient intake, including energy (or kilojoules) protein,
+                carbohydrates, essential fatty acids, vitamins and minerals as well as fibre and fluid.</p>
             <p>Health Tips</p>
-            <img src="../Images/Health tips.jpg" alt="Health img" width=400px height=150px;>
+            <p>Smoking</p>
+            <p>Eating late at night</p>
+            <p>Not drinking enough water</p>
+            <p>Not getting enough sleep</p>
+            <p>Not getting enough exercise</p>
             <p>For more information about the Health tips click on the below Health tips link</p>
             <a href="../Project/health.html" target="_blank">Health Tips</a>
         </div>
         <div></div>
         <div class="yogaimg">
             <p>Yoga Tips</p>
-            <img src="../Images/Yoga tips.jpg " alt="yoga img" width=400px height=150px;>
+            <img src="../Images/Mainimages/Yoga tips.jpg" alt="yoga img" width=400px height=150px;>
             <p>For more information about the Yoga tips click on the below Yoga tips link</p>
-            <a href="../Project/health.html" target="_blank">Yoga Tips</a>
+            <a href="../Project/Yoga.html" target="_blank">Yoga Tips</a>
         </div>
     </div>
+</body>
+
+</html>
