--- a/Project/Project/health.html
+++ b/Project/Project/health.html
@@ -26,7 +26,7 @@
         <div>
             <h1>Benefits of drinking Water</h1>
             <ul>
-                <li>Most of us dont drink enough water every day</li>
+                <li>Most of us dont drink enough water in our day life</li>
                 <li>But it’s best to start your day by re-hydrating with a full glass of water.
                 <li>Drinking a water in the morning helps to aid digestion, enhance skin health and boost energy.</li>
                 <li>It helps fight against flu, Kidney stones, Loss weight and Heart attack</p>
