Updated at at 9pm

--- a/Project/Project/health.html
+++ b/Project/Project/health.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compitable" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale= 1.0 " />
     <title>Free Health Tips</title>
-    <link rel="stylesheet" href="../Styles/1.css">
+    <link rel="stylesheet" href="../Styles/health.css">
     <link rel="stylesheet" href="../bootstrap-5.1.1-dist/css/bootstrap.min.css">
     <script src="../bootstrap-5.1.1-dist/js/bootstrap.js"></script>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container p-5">
         <div>
             <h2>Get enough sleep.</h2>
-            <ul>
+            <ul class="text-primary">
                 <li>Create the right environment for better sleep.</li>
                 <li>On going lack of sleep or poor-quality sleep increases health problems like cardiovascular disease,
                     high blood pressure, diabetes, depression and obesity.</li>
@@ -24,8 +24,8 @@
             </ul>
         </div>
         <div>
-            <h1>Benefits of drinking Water</h1>
-            <ul>
+            <h2>Benefits of drinking Water</h2>
+            <ul class="text-success">
                 <li>Most of us dont drink enough water in our day life</li>
                 <li>But it’s best to start your day by re-hydrating with a full glass of water.
                 <li>Drinking a water in the morning helps to aid digestion, enhance skin health and boost energy.</li>
@@ -34,7 +34,7 @@
         </div>
         <div>
             <h2>Reduce salt and sugar intake</h2>
-            <ul>
+            <ul class="text-warning">
                 <li>A high salt intake can result in high blood pressure, and increase the risk of cardiovascular
                     disease.</li>
             </ul>
@@ -42,7 +42,7 @@
 
         <div>
             <h2>Some of Healthy fruits in our daily life</h2>
-            <ul>
+            <ul class="text-primary">
                 <li>Apples : They are good source of vitamin C They’re rich in both soluble and insoluble fiber In fact,
                     consuming apples regularly may lower your risk of heart disease, stroke, cancer, overweight,
                     obesity.</li>
@@ -70,7 +70,7 @@
         </div>
         <div>
             <h2>Eat Fresh Vegetables</h2>
-            <ul>
+            <ul class="text-success">
                 <li>Vegetables are full of essential vitamins, minerals, and antioxidants that provide many important
                     health benefits to your body.</li>
                 <ol>
