--- a/Project/Project/main.html
+++ b/Project/Project/main.html
@@ -6,38 +6,38 @@
     <meta http-equiv="X-UA-Compitable" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale= 1.0 " />
     <title>Free Health and Yoga Tips</title>
-    <link rel="stylesheet" href="../Styles/1.css">
+    <link rel="stylesheet" href="../Styles/main.css">
     <link rel="stylesheet" href="../bootstrap-5.1.1-dist/css/bootstrap.min.css">
     <script src="../bootstrap-5.1.1-dist/js/bootstrap.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <div class="Titles">
+        <div class="Titles border border-danger mt-3 mb-3">
             <h1>FREE HEALTH AND YOGA TIPS</h1>
         </div>
         <div class="healthimg">
-            <img src="../Images/Mainimages/Health tips.jpg" alt="Health img" width=400px height=150px;>
-            <p>Poor eating habits include under- or over-eating, not having enough of the healthy foods we need each
-                day, or consuming too many types of food and drink, which are low in fibre or high in fat, salt and/or
-                sugar.
-                These unhealthy eating habits can affect our nutrient intake, including energy (or kilojoules) protein,
-                carbohydrates, essential fatty acids, vitamins and minerals as well as fibre and fluid.</p>
-            <p>Health Tips</p>
-            <p>Smoking</p>
-            <p>Eating late at night</p>
-            <p>Not drinking enough water</p>
-            <p>Not getting enough sleep</p>
-            <p>Not getting enough exercise</p>
-            <p>For more information about the Health tips click on the below Health tips link</p>
-            <a href="../Project/health.html" target="_blank">Health Tips</a>
+            <img src="../Images/Mainimages/healthtips.jpg" alt="Health img" width=800px height=225px>
+            <p>A healthful diet typically includes nutrient-dense foods from all major food groups, including lean
+                proteins, whole grains, healthful fats, and fruits and vegetables of many colors.</p>
+
+            <p>Eating health food means replacing foods that contain trans fats, added salt, and sugar with more
+                nutritious options and it also helpful for building strong bones, protecting the
+                heart, preventing disease, and boosting mood.</p>
+            <p class="h5">For more information about the Health tips click on the below Health tips link</p>
+            <a href="../Project/health.html" target="_blank" class="h4 text-danger">Health Tips</a>
         </div>
         <div></div>
         <div class="yogaimg">
             <p>Yoga Tips</p>
-            <img src="../Images/Mainimages/Yoga tips.jpg" alt="yoga img" width=400px height=150px;>
-            <p>For more information about the Yoga tips click on the below Yoga tips link</p>
-            <a href="../Project/Yoga.html" target="_blank">Yoga Tips</a>
+            <img src="../Images/Mainimages/yogatips.jpg" alt="yoga img" width=800px height=225px>
+            <p>Yoga is a type of exercise in which you move your body into various positions in order
+                to become more fit or flexible, to improve your breathing, and to relax your mind.</p>
+            <p>The art of practicing yoga helps in controlling an individual's mind, body and soul. It brings together
+                physical and mental disciplines to achieve a peaceful body and mind; it helps manage stress and anxiety
+                and keeps you relaxing. It also helps in increasing flexibility, muscle strength and body tone.</p>
+            <p class="h5">For more information about the Yoga tips click on the below Yoga tips link</p>
+            <a href="../Project/Yoga.html" target="_blank" class="h4 text-danger">Yoga Tips</a>
         </div>
     </div>
 </body>
