--- a/Project/Project/health.html
+++ b/Project/Project/health.html
@@ -11,86 +11,140 @@
     <script src="../bootstrap-5.1.1-dist/js/bootstrap.js"></script>
 </head>
 
-<body>
-    <div class="container p-5">
-        <div>
-            <h2>Get enough sleep.</h2>
-            <ul class="text-primary">
-                <li>Create the right environment for better sleep.</li>
-                <li>On going lack of sleep or poor-quality sleep increases health problems like cardiovascular disease,
-                    high blood pressure, diabetes, depression and obesity.</li>
-                <li>Adults need between 7 and 9 hours of sleep per night. Babies, young children, and teens need even
-                    more sleep to enable their growth and development.</li>
-            </ul>
+<body class="container p-5">
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+            <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                aria-expanded="true" aria-controls="collapseOne">
+                <h3>Get enough sleep</h3>
+            </button>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <ul class="text-primary">
+                        <li>Create the right environment for better sleep.</li>
+                        <li>On going lack of sleep or poor-quality sleep increases health problems like
+                            cardiovascular
+                            disease,
+                            high blood pressure, diabetes, depression and obesity.</li>
+                        <li>Adults need between 7 and 9 hours of sleep per night. Babies, young children, and teens
+                            need
+                            even
+                            more sleep to enable their growth and development.</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div>
-            <h2>Benefits of drinking Water</h2>
-            <ul class="text-success">
-                <li>Most of us dont drink enough water in our day life</li>
-                <li>But it’s best to start your day by re-hydrating with a full glass of water.
-                <li>Drinking a water in the morning helps to aid digestion, enhance skin health and boost energy.</li>
-                <li>It helps fight against flu, Kidney stones, Loss weight and Heart attack</p>
-            </ul>
+        <div class="accordion-item">
+            <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                aria-expanded="false" aria-controls="collapseTwo">
+                <h3>Benefits of drinking Water</h3>
+            </button>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <ul class="text-success">
+                        <li>Most of us dont drink enough water in our day life</li>
+                        <li>But it’s best to start your day by re-hydrating with a full glass of water.
+                        <li>Drinking a water in the morning helps to aid digestion, enhance skin health and boost
+                            energy.</li>
+                        <li>It helps fight against flu, Kidney stones, Loss weight and Heart attack</p>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div>
-            <h2>Reduce salt and sugar intake</h2>
-            <ul class="text-warning">
-                <li>A high salt intake can result in high blood pressure, and increase the risk of cardiovascular
-                    disease.</li>
-            </ul>
+        <div class="accordion-item">
+            <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                aria-expanded="false" aria-controls="collapseThree">
+                <h3>Reduce salt and sugar intake</h3>
+            </button>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <ul class="text-warning">
+                        <li>A high salt intake can result in high blood pressure, and increase the risk of
+                            cardiovascular
+                            disease.</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-
-        <div>
-            <h2>Some of Healthy fruits in our daily life</h2>
-            <ul class="text-primary">
-                <li>Apples : They are good source of vitamin C They’re rich in both soluble and insoluble fiber In fact,
-                    consuming apples regularly may lower your risk of heart disease, stroke, cancer, overweight,
-                    obesity.</li>
-                <li>
-                    Bananas : The benefits of bananas go beyond their potassium content. Along with providing 7% of the
-                    Daily
-                    Value(DV) for potassium, bananas contain (15Trusted Source):
-                    <ol>
-                        <li>Vitamin B6 : 27% of the DV</li>
-                        <li>Vitamin C : 12% of the DV</li>
-                        <li>Magnesium : 8% of the DV</li>
-                    </ol>
-                </li>
-                <li>
-                    Pineapple : It is one of the most popular tropical fruits.
-                    One cup (165 grams) of pineapple provides 88% of the DV for vitamin C and 73% of the DV for
-                    manganese.
-                    Manganese supports metabolism and blood sugar regulation and acts as an antioxidant.
-                </li>
-                <li>
-                    Mango : It is known as the “king of fruits,” mangoes are an excellent source of potassium, folate,
-                    fiber, and vitamins A, C, B6, E, and K.
-                </li>
-            </ul>
+        <div class="accordion-item">
+            <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseFour"
+                aria-expanded="false" aria-controls="collapseFour">
+                <h3>Some of Healthy fruits in our daily life</h3>
+            </button>
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <ul class="text-primary">
+                        <li>Apples : They are good source of vitamin C They’re rich in both soluble and insoluble
+                            fiber
+                            In fact,
+                            consuming apples regularly may lower your risk of heart disease, stroke, cancer,
+                            overweight,
+                            obesity.</li>
+                        <li>
+                            Bananas : The benefits of bananas go beyond their potassium content. Along with
+                            providing 7%
+                            of the
+                            Daily
+                            Value(DV) for potassium, bananas contain (15Trusted Source):
+                            <ol>
+                                <li>Vitamin B6 : 27% of the DV</li>
+                                <li>Vitamin C : 12% of the DV</li>
+                                <li>Magnesium : 8% of the DV</li>
+                            </ol>
+                        </li>
+                        <li>
+                            Pineapple : It is one of the most popular tropical fruits.
+                            One cup (165 grams) of pineapple provides 88% of the DV for vitamin C and 73% of the DV
+                            for
+                            manganese.
+                            Manganese supports metabolism and blood sugar regulation and acts as an antioxidant.
+                        </li>
+                        <li>
+                            Mango : It is known as the “king of fruits,” mangoes are an excellent source of
+                            potassium,
+                            folate,
+                            fiber, and vitamins A, C, B6, E, and K.
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div>
-            <h2>Eat Fresh Vegetables</h2>
-            <ul class="text-success">
-                <li>Vegetables are full of essential vitamins, minerals, and antioxidants that provide many important
-                    health benefits to your body.</li>
-                <ol>
-                    <li>Improve blood pressure</li>
-                    <li>Help your eyes</li>
-                    <li>Improve your skin</li>
-                    <li>Reduce risk of heart disease </li>
-                    <li>Reduce risk of cancer</li>
-                    <li>Improve your immune health</li>
-                </ol>
-                <li>Carrots : Carrots are known for being very high in vitamin A, which plays an
-                    important role in eye health, as you grow older.</li>
-                <li>Tomatoes : Each cup of chopped, raw tomatoes contains:
-                    <ol>
-                        <li>427 mg of potassium</li>
-                        <li>24.7 mg of vitamin C</li>
-                    </ol>
-                </li>
-                <li>Onions : Each cup of chopped onions can provide vitamin C, vitamin B6, manganese</li>
-            </ul>
+        <div class="accordion-item">
+            <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseFive"
+                aria-expanded="false" aria-controls="collapseFive">
+                <h3>Eat Fresh Vegetables</h3>
+            </button>
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <ul class="text-success">
+                        <li>Vegetables are full of essential vitamins, minerals, and antioxidants that provide many
+                            important
+                            health benefits to your body.</li>
+                        <ol>
+                            <li>Improve blood pressure</li>
+                            <li>Help your eyes</li>
+                            <li>Improve your skin</li>
+                            <li>Reduce risk of heart disease </li>
+                            <li>Reduce risk of cancer</li>
+                            <li>Improve your immune health</li>
+                        </ol>
+                        <li>Carrots : Carrots are known for being very high in vitamin A, which plays an
+                            important role in eye health, as you grow older.</li>
+                        <li>Tomatoes : Each cup of chopped, raw tomatoes contains:
+                            <ol>
+                                <li>427 mg of potassium</li>
+                                <li>24.7 mg of vitamin C</li>
+                            </ol>
+                        </li>
+                        <li>Onions : Each cup of chopped onions can provide vitamin C, vitamin B6, manganese</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </body>
