--- a/Project/Project/main.html
+++ b/Project/Project/main.html
@@ -11,33 +11,37 @@
     <script src="../bootstrap-5.1.1-dist/js/bootstrap.js"></script>
 </head>
 
-<body>
+<body class="img">
     <div class="container">
         <div class="Titles border border-danger mt-3 mb-3">
             <h1>FREE HEALTH AND YOGA TIPS</h1>
         </div>
-        <div class="healthimg">
-            <img src="../Images/Mainimages/healthtips.jpg" alt="Health img" width=800px height=225px>
-            <p>A healthful diet typically includes nutrient-dense foods from all major food groups, including lean
-                proteins, whole grains, healthful fats, and fruits and vegetables of many colors.</p>
+        <div class="box">
+            <div class="healthimg">
+                <img src="../Images/Mainimages/healthtips.jpg" alt="Health img" width=600px height=225px>
+                <p>A healthful diet typically includes nutrient-dense foods from all major food groups, including lean
+                    proteins, whole grains, healthful fats, and fruits and vegetables of many colors.</p>
 
-            <p>Eating health food means replacing foods that contain trans fats, added salt, and sugar with more
-                nutritious options and it also helpful for building strong bones, protecting the
-                heart, preventing disease, and boosting mood.</p>
-            <p class="h5">For more information about the Health tips click on the below Health tips link</p>
-            <a href="../Project/health.html" target="_blank" class="h4 text-danger">Health Tips</a>
+                <p>Eating health food means replacing foods that contain trans fats, added salt, and sugar with more
+                    nutritious options and it also helpful for building strong bones, protecting the
+                    heart, preventing disease, and boosting mood.</p>
+                <p class="h5">For more information about the Health tips click on the below Health tips link</p>
+                <a href="../Project/health.html" target="_blank" class="h4 text-danger">Health Tips</a>
+            </div>
         </div>
-        <div></div>
-        <div class="yogaimg">
-            <p>Yoga Tips</p>
-            <img src="../Images/Mainimages/yogatips.jpg" alt="yoga img" width=800px height=225px>
-            <p>Yoga is a type of exercise in which you move your body into various positions in order
-                to become more fit or flexible, to improve your breathing, and to relax your mind.</p>
-            <p>The art of practicing yoga helps in controlling an individual's mind, body and soul. It brings together
-                physical and mental disciplines to achieve a peaceful body and mind; it helps manage stress and anxiety
-                and keeps you relaxing. It also helps in increasing flexibility, muscle strength and body tone.</p>
-            <p class="h5">For more information about the Yoga tips click on the below Yoga tips link</p>
-            <a href="../Project/Yoga.html" target="_blank" class="h4 text-danger">Yoga Tips</a>
+        <div class="box">
+            <div class="yogaimg">
+                <img src="../Images/Mainimages/yogatips.jpg" alt="yoga img" width=600px height=225px>
+                <p>Yoga is a type of exercise in which you move your body into various positions in order
+                    to become more fit or flexible, to improve your breathing, and to relax your mind.</p>
+                <p>The art of practicing yoga helps in controlling an individual's mind, body and soul. It brings
+                    together
+                    physical and mental disciplines to achieve a peaceful body and mind; it helps manage stress and
+                    anxiety
+                    and keeps you relaxing. It also helps in increasing flexibility, muscle strength and body tone.</p>
+                <p class="h5">For more information about the Yoga tips click on the below Yoga tips link</p>
+                <a href="../Project/Yoga.html" target="_blank" class="h4 text-danger">Yoga Tips</a>
+            </div>
         </div>
     </div>
 </body>
