--- a/Project/Project/Yoga.html
+++ b/Project/Project/Yoga.html
@@ -2,16 +2,126 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compitable" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale= 1.0 " />
-    <title>Yoga Tips</title>
-    <link rel="stylesheet" href="../bootstrap-5.1.1-dist/css/bootstrap.min.css">
-    <script src="../bootstrap-5.1.1-dist/js/bootstrap.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="keywords" content="html,css,javascript">
+  <meta name="description" content="tutorials of html">
+  <meta name="author" content="sunil">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <script src="bootstrap-5.1.1-dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="bootstrap-5.1.1-dist/css/bootstrap.min.css">
+  <title>practicle8</title>
+  <link rel="stylesheet" href="../Styles/yoga.css">
 </head>
 
 <body>
 
+  <table style="width: 100%;">
+
+    <tr>
+
+
+      <td>
+        <h2>Suryanamaskar</h2>
+
+        <p>
+          <img src="../Images/yogaimages/surya.jpg" alt="" height="350px" width="300px"><br>
+          <strong>Instructions:-</strong><br>
+        <ol>
+          <li> Sit on the floor with the legs together and extended straight out in front.
+            Keep the back straight, shoulders level and head straight.
+            Place the hands, palms down, flat on top of the thighs then inhale deeply.</li>
+          <li> Exhale and reach down and loop the forefinger of the right hand around
+            the big toe of the right foot and grasp the left foot with the left hand. </li>
+          <li> Inhale and pull the right foot back placing the big toe next to the right ear. </li>
+        </ol>
+        </p>
+
+        </p>
+      </td>
+      <td>
+        <h2>Akarna-Dhanusa-asana</h2>
+        <p>
+          <img src="../Images/yogaimages/Steps-To-Do.jpg" alt="" height="250px" width="150px"><br>
+          <strong>Instructions:-</strong><br>
+        <ol>
+          <li> Sit on the floor with the legs together and extended straight out in front.
+            Keep the back straight, shoulders level and head straight.
+            Place the hands, palms down, flat on top of the thighs then inhale deeply.</li>
+          <li> Exhale and reach down and loop the forefinger of the right hand around
+            the big toe of the right foot and grasp the left foot with the left hand. </li>
+          <li> Inhale and pull the right foot back placing the big toe next to the right ear. </li>
+        </ol>
+        </p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <h2>Ardhachandra-asana</h2>
+        <p>
+          <img src="../Images/yogaimages/chandra.jpg" alt="" height="250px" width="150px"><br>
+          <strong>Instructions:-</strong><br>
+        <ol>
+          <li> Sit on the floor with the legs together and extended straight out in front.
+            Keep the back straight, shoulders level and head straight.
+            Place the hands, palms down, flat on top of the thighs then inhale deeply.</li>
+          <li> Exhale and reach down and loop the forefinger of the right hand around
+            the big toe of the right foot and grasp the left foot with the left hand. </li>
+          <li> Inhale and pull the right foot back placing the big toe next to the right ear. </li>
+        </ol>
+        </p>
+      </td>
+    
+
+    
+      <td>
+        <h2>Dhanura-asana</h2>
+        <p>
+          <img src="../Images/yogaimages/dhanurasana_625x350_61466409878.webp" alt="" height="250px" width="150px"><br>
+          <strong>Instructions:-</strong><br>
+        <ol>
+          <li> Sit on the floor with the legs together and extended straight out in front.
+            Keep the back straight, shoulders level and head straight.
+            Place the hands, palms down, flat on top of the thighs then inhale deeply.</li>
+          <li> Exhale and reach down and loop the forefinger of the right hand around
+            the big toe of the right foot and grasp the left foot with the left hand.</li>
+          <li> Inhale and pull the right foot back placing the big toe next to the right ear. </li>
+        </ol>
+        </p>
+      </td>
+    </tr>
+    <tr>
+    <td>
+      <h2>Hala-asana</h2>
+      <p>
+        <img src="../Images/yogaimages/yoga_625x350_81465802062.webp" alt="" height="250px" width="150px"><br>
+        <strong>Instructions:-</strong><br>
+      <ol>
+        <li> Sit on the floor with the legs together and extended straight out in front.
+          Keep the back straight, shoulders level and head straight.
+          Place the hands, palms down, flat on top of the thighs then inhale deeply.</li>
+        <li> Exhale and reach down and loop the forefinger of the right hand around
+          the big toe of the right foot and grasp the left foot with the left hand. </li>
+        <li> Inhale and pull the right foot back placing the big toe next to the right ear. </li>
+      </ol>
+    </td>
+    <td>
+      <h2>Naga-asana</h2>
+      <p>
+        <img src="../Images/yogaimages/woman-practices-yoga-u.jpg" alt="" height="250px" width="150px"><br>
+        <strong>Instructions:-</strong><br>
+      <ol>
+        <li> Sit on the floor with the legs together and extended straight out in front.
+          Keep the back straight, shoulders level and head straight.
+          Place the hands, palms down, flat on top of the thighs then inhale deeply.</li>
+        <li> Exhale and reach down and loop the forefinger of the right hand around
+          the big toe of the right foot and grasp the left foot with the left hand. </li>
+        <li> Inhale and pull the right foot back placing the big toe next to the right ear. </li>
+      </ol>
+      </p>
+    </td>
+    </tr>
+  </table>
 </body>
 
 </html>
